--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ passion project/bin/
 passion project/App_Data/
 passion project/obj/
 package/
-passion project/Content/Items/
+passion project/Content/Images/
